--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -141,8 +141,8 @@ width: 100%
 }
 
 .calendar-view-header {
-	top: 20px;
-	left: 50px;
+	top: 2%;
+	left: 5%;
 	width:90%;
 	position: absolute;
 }
@@ -159,8 +159,8 @@ width: 100%
 .calendar-table {
 	border-collapse: collapse;
 	position: absolute;
-	top: 60px;
-	left: 50px;
+	top: 7%;
+	left: 5%;
 	height: 80%;
 	width: 90%;
 	background-color: white;
@@ -171,6 +171,8 @@ width: 100%
 	height: 8%;
 	color: black;
 	border: 2px solid black;
+	text-align: center;
+	font-size: 20px;
 }
 
 .sunday {
@@ -197,12 +199,19 @@ width: 100%
 
 .calendar-table td {
 	font-size: 30px;
-	color: #0101ddf;
+	color: #0101dd;
 	vertical-align: top;
+	width: 10%;
 }
 
-#date {
+.deactive-date {
 	background-color: #b8b8b8;
+}
+
+.comments {
+	position: absolute;
+	top: 88%;
+	right: 5%;
 }
 
 form {
